<!--
  ~ The MIT License (MIT)
  ~
  ~ Copyright (c) 2019 Chathura Buddhika
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included
  ~ in all copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NON-INFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<resources>
    <!-- App Name -->
    <string name="app_name">COVID-19 SL</string>

    <!-- Navigation Drawer -->
    <string name="navigation_drawer_icon">Navigation Drawer Icon</string>
    <string name="navigation_drawer_open">Open Navigation Panel</string>
    <string name="navigation_drawer_close">Close Navigation Panel</string>
    <string name="navigation_drawer_dashboard">Dashboard</string>
    <string name="navigation_drawer_symptoms">Symptoms</string>
    <string name="navigation_drawer_prevention">Prevention</string>
    <string name="navigation_drawer_about">About</string>

    <!-- Dashboard Image Content Descriptions -->
    <string name="dashboard_masked_people">Masked People</string>
    <string name="dashboard_symptoms_button_background">Symptoms Button Background</string>
    <string name="dashboard_prevention_button_background">Prevention Button Background</string>
    <string name="dashboard_curved_background">Curved Background</string>
    <string name="dashboard_local_active_count_backgrund">Local Active Count Backgrund</string>
    <string name="dashboard_local_recovered_count_background">Local Recovered Count Background</string>
    <string name="dashboard_local_dead_count_background">Local Dead Count Background</string>
    <string name="dashboard_local_total_count_background">Local Total Count Background</string>
    <string name="dashboard_local_new_count_background">Local New Count Background</string>
    <string name="dashboard_local_new_deaths_count_background">Local New Deaths Count Background</string>
    <string name="dashboard_global_active_count_background">Global Active Count Background</string>
    <string name="dashboard_global_recovered_count_background">Global Recovered Count Background</string>
    <string name="dashboard_global_dead_count_background">Global Dead Count Background</string>

    <!-- Dashboard Visible Text Values -->
    <string name="dashboard_title_srilanka">SRILANKA</string>
    <string name="dashboard_title_coronavirus">CORONAVIRUS</string>
    <string name="dashboard_title_dashboard">DASHBOARD</string>
    <string name="dashboard_btn_symptoms">SYMPTOMS</string>
    <string name="dashboard_btn_prevention">PREVENTION</string>
    <string name="dashboard_statistics">STATISTICS</string>
    <string name="dashboard_local_statistics">LOCAL STATISTICS</string>
    <string name="dashboard_active">ACTIVE</string>
    <string name="dashboard_recovered">RECOVERED</string>
    <string name="dashboard_deaths">DEATHS</string>
    <string name="dashboard_total">TOTAL</string>
    <string name="dashboard_new_cases">NEW CASES</string>
    <string name="dashboard_new_deaths">NEW DEATHS</string>
    <string name="dashboard_global_statistics">GLOBAL STATISTICS</string>

    <!-- Symptoms Image Content Descriptions -->
    <string name="symptoms_image_description">Image of a Person with Covid-19 Symptoms</string>

    <!-- Symptoms Visible Text Values -->
    <string name="symptoms_title">SYMPTOMS</string>
    <string name="symptoms_description">
        The Coronavirus pandemic has erupted in Sri Lanka and here are the symptoms one should look
        out for if they suspect they have contacted the disease.\n\n
        1. Cough\n
        2. Fever\n
        3. Shortness of Breath\n
        4. Headache\n
        5. Runny Nose\n
        6. Sore Throat\n
        \nHaving these symptoms doesn’t mean you have COVID-19.
        However, since these are common symptoms of the COVID-19 infection,
        for the sake of those close to you, please follow the measures mentioned below.
        Understand that this is part of your national responsibility.\n
        \nDo not leave home for any reason other than seeking medical advice.\n
        \nIf possible, use a separate room for yourself.\n
        \nAlways keep a distance of at least one meter between yourself and others at home.\n
        \nIf possible, use a separate washroom. If this is not possible, always wash the taps, doorknobs etc. after use with soap and water.\n
        \nDo not encourage visitors to the house.\n
        \nFrequently wash your hands for at least 20 seconds with soap and water. Ask your family members to do the same.\n
        \nUse separate cups, plates, towels, bedspreads etc. Wash them separately with soap and water.\n
        \nCover your mouth and nose with a disposable tissue or the inside of your elbow when coughing and sneezing. Safely dispose of the used tissues.\n
        \nDo not reuse face masks and gloves etc. Dispose them in a garbage bin with a lid.\n
        \nIf you have returned from abroad or associated someone who has COVID-19 or someone suspected of being infected within the past 14 days, immediately report to the Public Health Inspector (PHI) or the Medical Officer of Health (MOH) of your area.\n
        \nCall 1999 hotline for medical and other advice regarding Covid-19.\n
        \nCall 1990 for ambulance facilities in case of an emergency.
    </string>

    <!-- Prevention Image Content Descriptions -->
    <string name="prevention_image_description">Ready to Prevent from Covid-19 Family</string>
    <string name="prevention_wash_hands_icon">Wash Hands Icon</string>
    <string name="prevention_wear_a_face_mask_icon">Wear a Face Mask Icon</string>
    <string name="prevention_cover_coughs_icon">Cover Coughs Icon</string>
    <string name="prevention_maintain_safe_distance_icon">Maintain Safe Distance Icon</string>
    <string name="prevention_stay_home_icon">Stay Home Icon</string>
    <string name="prevention_avoid_crowded_places_icon">Avoid Crowded Places Icon</string>

    <!-- Prevention Visible Text Values -->
    <string name="prevention_title">PREVENTION</string>
    <string name="prevention_basic_preventive_measures">BASIC PREVENTIVE MEASURES</string>
    <string name="prevention_wash_your_hands_often">Wash Your\nHands Often</string>
    <string name="prevention_wear_a_face_mask">Wear a\nFace Mask</string>
    <string name="prevention_cover_coughs_and_sneezes">Cover Coughs\nand Sneezes</string>
    <string name="prevention_maintain_a_safe_distance">Maintain a\nSafe Distance</string>
    <string name="prevention_stay_at_home">Stay at\nHome</string>
    <string name="prevention_avoid_crowded_places">Avoid Crowded\nPlaces</string>
    <string name="prevention_prevention_at_workplace">PREVENTION AT WORKPLACE</string>
    <string name="prevention_at_workplace_description">
        We spend more time at work places. So we need to care more about how to protect places that
        work against COVID-19. Follow these instructions to keep your work safe.\n
        \nIf anyone shows light symptoms such as fever, cough or cold, advise him not to go to work
        until it is fully healed. If possible, encourage me to work from home.\n
        \nClean the equipment used by more than one person like door handles, phone receivers,
        table surface, stapler.\n
        \nWash your hands well often using soap. Avoid touching your face, mouth, nose and eyes.
        COVID-19 virus is usually spread through contact.\n
        \nAvoid increasing the crowd as much as possible. Snooze meetings and follow modern
        communication methods such as video conferencing and group calling.\n
        \nIf you reduce the chance to spread the corona virus at your workplace, you may also reduce
        the chance of immune to your beloved family members.\n
    </string>

    <!-- About Image Content Descriptions -->
    <string name="about_image_description">App Logo and Name</string>

    <!-- About Visible Text Values -->
    <string name="about_title">ABOUT</string>
    <string name="about_copyright_chathurabuddi">(c) chathurabuddi</string>
    <string name="about_designed_and_developed_by">Designed and Developed By</string>
    <string name="about_chathura_buddhika">CHATHURA BUDDHIKA</string>
    <string name="about_live_data_fetched_from">Live Data Fetched From</string>
    <string name="about_health_promotion_bureau_sri_lanka">HEALTH PROMOTION BUREAU, SRI LANKA</string>
    <string name="about_app_icon_and_vector_art">App Icon and Vector Art</string>
    <string name="about_https_www_freepik_com">https://www.freepik.com</string>
    <string name="about_btn_report_a_bug">Report a Bug</string>

</resources>
